# ratatui-recipe

./: ATTRIBUTION  Cargo.toml  LICENSE  README.md
crates/ratatui-recipe/: Cargo.toml
crates/ratatui-recipe-macros/: Cargo.toml
crates/ratatui-recipe-macros/src/: lib.rs
crates/ratatui-recipe/examples/: ratapp_example.rs
crates/ratatui-recipe/src/: app.rs  lib.rs  router.rs
src/: app.rs  lib.rs  page.rs  router.rs
template/: Cargo.toml  LICENSE  README.md  cargo-generate.toml
template/src/: main.rs
template/src/pages/: home.rs  mod.rs
