[package]
name = "ratatui-recipe"
version = {workspace = true}
edition = "2024"
authors = ["Leon Schaumann"]
license = "MIT"
description = "Async framework for Rust's TUI library, ratatui, because the other one doesn't work."
repository = "https://github.com/ls3205/ratatui-recipe"

[dependencies]
ratatui = "0.30.0"
tokio = {version="1.49.0", features=["macros", "rt-multi-thread", "sync"]}
ratatui-recipe-macros = { path = "../ratatui-recipe-macros", version="0.0.1" }
